# ShojiWM

./: .gitignore  Cargo.toml  package-lock.json  package.json  tsconfig.json
src/: config.rs  cursor.rs  drawing.rs  input.rs  main.rs  presentation.rs  runtime_key_binding.rs  runtime_process.rs  state.rs  winit.rs  xwayland_satellite.rs
src/backend/: async_assets.rs  backdrop_blur.frag  backdrop_blur.vert  backdrop_blur_down.frag  backdrop_blur_up.frag  blend_raw.frag  clipped_memory.frag  clipped_memory.rs  clipped_surface.frag  clipped_surface.rs  damage.rs  damage_blink.rs  decoration.rs  icon.rs  mod.rs  noise_salt.frag  rounded.rs  rounded_rect.frag  shader_effect.rs  snapshot.rs  text.rs  tty.rs  visual.rs  window.rs  winit.rs
src/grabs/: move_grab.rs  resize_grab.rs
src/handlers/: compositor.rs  layer_shell.rs  mod.rs  xdg_shell.rs  xwayland.rs
src/ssd/: bridge.rs  evaluator.rs  integration.rs  interaction.rs  mod.rs  window_model.rs
tools/: decoration-runtime.ts  evaluate-decoration.ts
