[package]
name = "shoji_wm"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.11.0"
thiserror = "2.0.12"
smithay = {
    git = "https://github.com/Smithay/smithay/",
    rev = "f6d10709db2bb68c46b9c128a4163d035356572c"
}
smithay-drm-extras = {
    git = "https://github.com/Smithay/smithay.git",
    rev = "f6d10709db2bb68c46b9c128a4163d035356572c",
    package = "smithay-drm-extras",
    default-features = false
}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
xcursor = "0.3.10"
